src/test/deca/context/valid/oracle/same_name_params.deca
class A{
    void a(int a){
        print(a);
    }
}