src/test/deca/context/invalid/oracle/condition_while_int2.deca
{
    while(258){
        print();
    }
}